# jingle-dmx

./: .gitignore  98-udmx.rules  LICENSE  PROFILING.md  README.md  audio_core.c  audio_core.pyx  audio_model.py  base_dmx.py  config.py  dynamic_thresholds.py  effect_engine.py  eurolite_strobe.py  jingle-dmx  jingle-dmx.service  jingle_dmx.prof  laser.py  light_strip.py  main.py  main_usb.py  mic.py  pyproject.toml  runtime_control.py  runtime_state.json  service_start.py  setup.py  show_controller.py  smoke_bubble_machine.py  spotlight.py  stinger.py  strobe.py  test_b480.py  test_base_dmx.py  test_udmx.py  usb_mic.py  web_controller.py
tests/: test_b480.py  test_base_dmx.py  test_strobe.py  test_udmx_devices.py
