[project]
name = "jingle-dmx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blinkt>=0.1.2",
    "icecream>=2.1.3",
    "loguru>=0.7.3",
    "matplotlib>=3.10.0",
    "pyaudio>=0.2.14",
    "ruff>=0.8.4",
    "soundcard>=0.4.3",
    "udmx-pyusb>=2.0.0",
    "uv>=0.5.13",
]
