[project]
name = "jingle-dmx"
version = "0.1.0"
description = "DMX controller built on Raspberry Pi 4"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blinkt>=0.1.2",
    "icecream>=2.1.3",
    "loguru>=0.7.3",
    "matplotlib>=3.10.0",
    "pyaudio>=0.2.14",
    "ruff>=0.8.4",
    "soundcard>=0.4.3",
    "udmx-pyusb>=2.0.0",
    "uv>=0.5.13",
    "cython>=3.0.0",
    "numpy>=1.26.0",
    "py-spy>=0.4.1",
]

[build-system]
requires = [
  "setuptools>=65",
  "wheel",
  "Cython>=3.0.0",
  "numpy>=1.26.0",
]
build-backend = "setuptools.build_meta"
